--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
